--- a/app/assets/stylesheets/daydash.sass
+++ b/app/assets/stylesheets/daydash.sass
@@ -1,5 +1,6 @@
-/*
- *= require ./components/core
- *= require ./components/app
- *= require ./components/font
- */
+
+//= require jquery-ui
+//= require slick
+//= require slick-theme
+//= require_tree ./components
+//= require_tree ./pages
