--- a/app/views/layouts/daydash.html.erb
+++ b/app/views/layouts/daydash.html.erb
@@ -11,12 +11,12 @@
     <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track' => true %>
     <%= javascript_include_tag 'application', 'data-turbolinks-track' => true %>
 
-    <%= stylesheet_link_tag 'client/core', media: 'all', 'data-turbolinks-track' => true %>
+    <%= stylesheet_link_tag 'daydash', media: 'all', 'data-turbolinks-track' => true %>
 
     <!-- Google Map -->
     <%= javascript_include_tag '//maps.googleapis.com/maps/api/js?key=AIzaSyBYyAbr0KMSO5pXyEqNYp9_c6KdbYb9P5A&libraries=places', 'data-turbolinks-track' => true, media: 'all' %>
 
-    <%= javascript_include_tag 'client/core', 'data-turbolinks-track' => true %>
+    <%= javascript_include_tag 'daydash', 'data-turbolinks-track' => true %>
   </head>
   <body>
     <div id="fb-root"></div>
