--- a/app/assets/stylesheets/pages/organizer.sass
+++ b/app/assets/stylesheets/pages/organizer.sass
@@ -1,44 +1,179 @@
-html, body
-  height: 100%
-  margin: 0
-  padding: 0
 
-#map
-  height: 100%
+$gray-color-3: #333
+$gray-color-4: #444
+$gray-color-8: #888
+$gray-color-a: #aaa
+$gray-color-c: #ccc
+$gray-color-e: #eee
 
-.controls
-  margin-top: 10px
-  border: 1px solid transparent
-  border-radius: 2px 0 0 2px
-  box-sizing: border-box
-  -moz-box-sizing: border-box
-  height: 32px
-  outline: none
-  box-shadow: 0 2px 6px rgba(0, 0, 0, 0.3)
+$green-color: #19D4D6
 
-#pac-input
-  background-color: #fff
-  font-family: Roboto
-  font-size: 15px
-  font-weight: 300
-  margin-left: 12px
-  padding: 0 11px 0 13px
-  text-overflow: ellipsis
-  width: 300px
-  &:focus
-    border-color: #4d90fe
+#organizer-event-list
+  #event-list-section
+    .container
+      max-width: 900px
+    .event-list
+      .list-body
+        padding-top: 40px
 
-.pac-container
-  font-family: Roboto
+#organizer-events-new, #organizer-events-edit
+  .section
+    padding-top: 30px
 
-#type-selector
-  color: #fff
-  background-color: #4d90fe
-  padding: 5px 11px 0px 11px
-  label
-    font-family: Roboto
-    font-size: 13px
-    font-weight: 300
+    .section-header
+      margin-bottom: 30px
 
-#target
-  width: 345px
+    .form-section
+      margin-bottom: 30px
+
+
+    @media (max-width: 991px)
+      padding-top: 15px
+
+      .section-header
+        margin-bottom: 15px
+
+      .form-control
+        min-width: 120px
+
+      .form-inline
+        .form-control
+          display: table-cell
+          width: 1%
+
+#organizer-events-new, #organizer-events-edit
+  .ticket-list
+    .ticket:first-child
+      .btn-ticket-delete
+        display: none
+
+  .image-list
+    .image
+      margin-bottom: 30px
+      height: 150px
+      background-size: cover
+      background-position: center
+      background-repeat: no-repeat
+      background-color: $gray-color-c
+
+  .form-title
+    margin-top: 0px
+  @media (max-width: 991px)
+    .form-title
+      font-size: 24px
+
+#organizer-settings-page form .form-group:nth-child(2n+1)
+  clear: left
+
+#organizer-event-orders
+  #main
+    background: #fcfcfc
+
+  #order-list-section
+    padding-top: 30px
+
+    .section-header
+      margin-bottom: 30px
+    @media (max-width: 991px)
+      padding-top: 15px
+
+      .section-header
+        margin-bottom: 15px
+
+
+#organizer-event-checkin
+
+  #main
+    background: #fcfcfc
+
+  #checkin-section
+    padding-top: 30px
+
+    .section-header
+      margin-bottom: 30px
+
+    .event-section-panel
+      margin-bottom: 50px
+
+      .panel-header
+        margin-bottom: 15px
+
+        .panel-title
+          margin-bottom: 5px
+          font-weight: bold
+
+        .meta-info
+          margin-top: 5px
+
+    @media (max-width: 991px)
+      padding-top: 15px
+
+      .section-header
+        margin-bottom: 15px
+
+
+
+.organizer-table
+  background: white
+  box-shadow: 0px 4px 10px rgba(0,0,0,0.1)
+  margin-bottom: 30px
+
+  .table
+    margin-bottom: 0px
+
+    thead
+      tr
+        td, th
+          background: $gray-color-4
+          color: white
+          font-weight: 200
+.organizer-event-page
+  @media (max-width: 991px)
+    .section
+      .section-header
+        .event-title
+          font-size: 24px
+          line-height: 1.5em
+
+.organizer-event-nav
+  border-top: 1px solid #ddd
+  margin-bottom: 30px
+
+  li
+    a
+      &, &:active, &:link, &:visited
+        padding: 8px 10px
+        color: $gray-color-4
+        background: transparent
+        border-bottom: 1px solid #ddd
+
+      &:hover
+        background: $gray-color-e
+
+      .icon
+        float: left
+        margin-right: 15px
+
+  @media (max-width: 991px)
+    border-top: 0px
+
+    li
+      display: table-cell
+      width: 1%
+      padding: 0px
+      text-align: center
+
+      a
+        &, &:active, &:link, &:visited
+          padding: 5px
+          border-bottom: 0px
+          border-right: 1px solid #ddd
+          font-size: 12px
+
+          .icon
+            margin-right: 5px
+
+      &:last-child
+        a
+          &, &:active, &:link, &:visited
+            border-right: 0px
