--- a/app/assets/stylesheets/pages/events.sass
+++ b/app/assets/stylesheets/pages/events.sass
@@ -105,13 +105,22 @@ html, body
           a
             padding: 20px 10px
             font-size: 14px
+
+      .navbar-right
+        li a
+          padding: 15px
+
   @media (min-width: 1200px)
     .navbar
-      .navbar-left
+      .navbar-left, .navbar-right
         li
           a
             padding: 20px 15px
             font-size: 16px
+
+      .navbar-right
+        li a
+          padding: 15px
 
 #wrapper
   position: relative
