--- a/app/views/client/events/index.html.erb
+++ b/app/views/client/events/index.html.erb
@@ -19,7 +19,7 @@
   <div class="container">
     <ul class="nav nav-pills nav-daydash nav-daydash-green">
       <li class="active">
-        <%= link_to 'ALL', 'javascript:;', class: 'category-filter' %>
+        <%= link_to 'ALL', 'javascript:;', class: 'category-filter', 'data-filter': 0 %>
         <!-- <a href="#" onclick="return"></a> -->
       </li>
       <% @global_categories.each do |category| %>
