### fixed menu login
- What I did
I've …

- How I did it
I've changed …

- Description for the changelog
…….

--- a/app/assets/stylesheets/pages/events.sass
+++ b/app/assets/stylesheets/pages/events.sass
@@ -109,6 +109,8 @@ html, body
       .navbar-right
         li a
           padding: 15px
+        #menu-login
+          padding: 20px
 
   @media (min-width: 1200px)
     .navbar
@@ -121,6 +123,8 @@ html, body
       .navbar-right
         li a
           padding: 15px
+        #menu-login
+          padding: 20px
 
 #wrapper
   position: relative
