### fix all in troll
- What I did
I've …

- How I did it
I've changed …

- Description for the changelog
…….

--- a/app/assets/stylesheets/pages/events.sass
+++ b/app/assets/stylesheets/pages/events.sass
@@ -107,7 +107,7 @@ html, body
             font-size: 14px
 
       .navbar-right
-        li a
+        li.dropdown a
           padding: 15px
         #menu-login
           padding: 20px
@@ -121,7 +121,7 @@ html, body
             font-size: 16px
 
       .navbar-right
-        li a
+        li.dropdown a
           padding: 15px
         #menu-login
           padding: 20px
