--- a/app/views/client/events/express.html.erb
+++ b/app/views/client/events/express.html.erb
@@ -8,7 +8,7 @@
         <div class="event card payment-card">
           <%= link_to client_event_path(@event.to_url), target: '_self' do %>
             <% if @event.event_pictures.present? %>
-              <div class="cover" style="background-image: url(<%= @event.event_pictures.first.try(:media, :thumb) %>);"></div>
+              <div class="cover" style="background-image: url(<%= @event.event_pictures.first.try(:media, :full) %>);"></div>
             <% else %>
               <div class="cover"></div>
             <% end %>
