--- a/app/views/layouts/daydash.html.erb
+++ b/app/views/layouts/daydash.html.erb
@@ -166,8 +166,12 @@
               <div>
                 <div class="copyright">© 2016 Daydash.co</div>
                 <ul class="list-body list-inline">
-                  <li><a href="<%= terms_and_conditions_path %>">Terms &amp; Conditions</a></li>
-                  <li><a href="<%= privacy_policy_path %>">Privacy Policy</a></li>
+                  <li>
+                    <%= link_to "Terms & Conditions", terms_and_conditions_path, target: '_self' %>
+                  </li>
+                  <li>
+                    <%= link_to "Privacy Policy", privacy_policy_path, target: '_self' %>
+                  </li>
                 </ul>
               </div>
 
@@ -187,16 +191,16 @@
         <%= render partial: "layouts/parts/register-form" %>
       </div>
     </div>
-  </body>
 
-<div id="fb-root"></div>
-<script>(function(d, s, id) {
-  var js, fjs = d.getElementsByTagName(s)[0];
-  if (d.getElementById(id)) return;
-  js = d.createElement(s); js.id = id;
-  js.src = "//connect.facebook.net/en_US/sdk.js#xfbml=1&version=v2.7&appId=259929777688738";
-  fjs.parentNode.insertBefore(js, fjs);
-}(document, 'script', 'facebook-jssdk'));</script>
-  <!-- Template -->
-  <%= render partial: "layouts/parts/section" %>
+    <div id="fb-root"></div>
+    <script>(function(d, s, id) {
+      var js, fjs = d.getElementsByTagName(s)[0];
+      if (d.getElementById(id)) return;
+      js = d.createElement(s); js.id = id;
+      js.src = "//connect.facebook.net/en_US/sdk.js#xfbml=1&version=v2.7&appId=259929777688738";
+      fjs.parentNode.insertBefore(js, fjs);
+    }(document, 'script', 'facebook-jssdk'));</script>
+      <!-- Template -->
+      <%= render partial: "layouts/parts/section" %>
+  </body>
 </html>
