--- a/app/views/layouts_mailer/parts/_order.html.erb
+++ b/app/views/layouts_mailer/parts/_order.html.erb
@@ -116,8 +116,8 @@
                             <% @order.tickets.each do |ticket| %>
                               <tr>
                                 <td style="font-size: 14px; font-weight: 200; padding-bottom: 5px;"><%= ticket.section.title %></td>
-                                <td style="font-size: 14px; font-weight: 200;" align="right">฿<%= ticket.to_price %> x 1</td>
-                                <td style="font-size: 14px; font-weight: 200;" align="right">฿<%= ticket.to_price %></td>
+                                <td style="font-size: 14px; font-weight: 200;" align="right"><%= convert_to_currency ticket.to_price %> x 1</td>
+                                <td style="font-size: 14px; font-weight: 200;" align="right"><%= convert_to_currency ticket.to_price %></td>
                               </tr>
                             <% end %>
                             <tr>
@@ -126,7 +126,7 @@
                               </td>
                             </tr>
                             <tr>
-                              <td style="font-size: 14px; font-weight: 200;" colspan="3" align="right">Total ฿<%= @order.to_price %></td>
+                              <td style="font-size: 14px; font-weight: 200;" colspan="3" align="right">Total <%= convert_to_currency @order.to_price %></td>
                             </tr>
                             <tr>
                               <td colspan="3" style="padding: 10px 0px;">
@@ -135,7 +135,11 @@
                             </tr>
                             <tr>
                               <td style="font-size: 14px; font-weight: 200;">ชำระเงินโดย: <%= @payment.channel %></td>
-                              <td style="font-size: 14px; font-weight: 200;" colspan="2" align="right">สถานะ: <strong style="color: #AC0000;"><%= @payment.stages %></strong></td>
+                              <% if @payment.status.success? %>
+                                <td style="font-size: 14px; font-weight: 200;" colspan="2" align="right">สถานะ: <strong style="color: #17A41D;"><%= @payment.stages %></strong></td>
+                              <% else %>
+                                <td style="font-size: 14px; font-weight: 200;" colspan="2" align="right">สถานะ: <strong style="color: #AC0000;"><%= @payment.stages %></strong></td>
+                              <% end %>
                             </tr>
                           </table>
                         </td>
