--- a/app/assets/stylesheets/pages/events.sass
+++ b/app/assets/stylesheets/pages/events.sass
@@ -933,6 +933,8 @@ label
         display: table-cell
         width: 1%
 
+#payment-section
+  padding-top: 40px
 
 #payment-complete-page
   #credit-card-inform-section
