### show number checked-in and remining
- What I did
I've …

- How I did it
I've changed …

- Description for the changelog
…….

--- a/app/views/organizer/events/checkin.html.erb
+++ b/app/views/organizer/events/checkin.html.erb
@@ -23,8 +23,8 @@
               <div class="col-xs-12 col-md-6">
                 <ul class="meta-info list-inline">
                   <li>Attendee: <%= section.tickets.count %></li>
-                  <li>Checked-in: <%= section.tickets.where(stages: 'checked-in').count %></li>
-                  <li>Remaining: <%= section.tickets.where(stages: 'new').count %></li>
+                  <li>Checked-in: <%= section.tickets.where(status: :used).count %></li>
+                  <li>Remaining: <%= section.tickets.where(stages: :unusable).count %></li>
                 </ul>
               </div>
               <div class="col-xs-12 col-md-6">
