--- a/app/views/layouts/parts/_login-form.html.erb
+++ b/app/views/layouts/parts/_login-form.html.erb
@@ -1,6 +1,6 @@
 <div id="login-form">
   <%= form_for(resource, as: resource_name, url: session_path(resource_name)) do |f| %>
-    <input type="hidden" name="continue" value="" />
+    <input type="hidden" name="continue" value="<%= request.env['PATH_INFO'] %>" />
     <div class="modal-content">
       <div class="modal-header">
         <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
